note workshop not open to public

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 -->
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers at NYU.
+  The course is limited to graduate students and postdoctoral fellows at NYU, and is not open to the public.
   <strong>You don't need to have any previous knowledge of the tools that will
     be presented at the workshop.</strong>
 </p>
