--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
 venue: "NYU"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "Coles Sports Center, 181 Mercer Street, New York, NY"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+address: "NYU Medical Center at 550 1st Avenue, New York 10016 (room 109 June 9, room 101 June 10)"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: "us"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "40.726720,-73.997313"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: "June 9–10, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: "9–5"    # human-readable time (e.g., "9:00 am - 4:30 pm")
+humantime: "9:00 am–5:00 pm on June 9, and 9:30am–5:30pm on June 10"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-06-09      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2015-06-10        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Matthew Aiello-Lammens", "Jared Camins-Esakov"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
@@ -199,12 +199,12 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with R</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:30</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>11:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:30</td>  <td>Building programs with R</td> </tr>
+      <tr> <td>15:00</td>  <td>Coffee</td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
