--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 {% if page.latlng %}
 <p id="where">
   <strong>Where:</strong>
-  {{page.address}}.
+  The classes will be held at NYU Langone Medical Center at 550 1st Avenue in Coles 109 (Thursday) and Coles 101 (Friday). 
+  After entering on 1st Ave, follow the Yellow Pathway to the Coles Student Center (see also a <a href="http://www.med.nyu.edu/neurology/sites/default/files/neurology/nyulmc-campus-map.pdf">map of the Medical Center</a>).
+
   Get directions with
   <a href="//www.openstreetmap.org/?mlat={{page.latlng | replace:',','&mlon='}}&zoom=16">OpenStreetMap</a>
   or
